Base working with gradle config centralized conventions + version and defined gradle tasks